testsuite/tests/backpack/should_fail/bkpfail16.bkp
unit p where
    signature ShouldFail where
        data Booly
unit q where
    dependency p[ShouldFail=ghc-internal:Data.Bool]
