testsuite/tests/backpack/should_fail/bkpfail16.stderr
[1 of 2] Processing p
  [1 of 1] Compiling ShouldFail[sig]  ( p/ShouldFail.hsig, nothing )
[2 of 2] Processing q
  Instantiating q
  [1 of 1] Including p[ShouldFail=base-4.16.0.0:Data.Bool]
    Instantiating p[ShouldFail=base-4.16.0.0:Data.Bool]
    [1 of 1] Compiling ShouldFail[sig]  ( p/ShouldFail.hsig, bkpfail16.out/p/p-1OqLaT7dAn947wScQQKCw5/ShouldFail.o )

bkpfail16.bkp:2:5: error:
    • ‘Booly’ is exported by the hsig file, but not exported by the implementing module ‘Data.Bool’
    • while checking that Data.Bool implements signature ShouldFail in p[ShouldFail=Data.Bool]
